--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	
+	<div class="container">
+
+		<header>
+
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Homework</a></li>
+				<li><a href="#">Settings</a></li>
+			</ul>
+
+			<img src="images/av_64.png" alt="av_64">
+
+		</header>
+
+		
+
+	</div>
 </body>
 </html>
