--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<header>
 
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Homework</a></li>
-				<li><a href="#">Settings</a></li>
+				<li><a href="https://github.com/art-tal/HT_3_2019.11.10.git">Home</a></li>
+				<li><a href="https://github.com/art-tal/HT_3_2019.11.10.git">Homework</a></li>
+				<li><a href="https://github.com/art-tal/HT_3_2019.11.10.git">Settings</a></li>
 			</ul>
 
 			<img src="images/av_64.png" alt="av_64">
